--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "~4.9.x",
-    "body-parser": "^1.12.4"
+    "body-parser": "^1.12.4",
+    "ejs": "^2.3.1"
   },
   "engines": {
     "node": "0.12.2"
