--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "~4.9.x",
     "body-parser": "^1.12.4",
-    "ejs": "^2.3.1"
+    "ejs": "^2.3.1",
+    "mongoose": "^4.0.5"
   },
   "engines": {
     "node": "0.12.2"
